[gd_scene load_steps=6 format=2]

[ext_resource path="res://GFX/Interactables/Mound/Plants-1.png.png" type="Texture" id=1]
[ext_resource path="res://Interactables/Mound.gd" type="Script" id=2]
[ext_resource path="res://GUI/PlantPrompt.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/PlantList.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.2947

[node name="Mound" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
plants = PoolStringArray( "res://Interactables/MushroomBig.tscn", "", "" )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PlantPrompt" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -5.00564
margin_top = -23.026
margin_right = 38.9944
margin_bottom = 14.974
rect_scale = Vector2( 0.25, 0.25 )

[node name="PlantList" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = -1.88562
anchor_top = -1.68983
anchor_right = -1.74891
anchor_bottom = -1.6365
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
